--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 int scene = 0;
 
 int answer_list[] = {1, 2, 3, 4, 5, 6, 7};
+int scene_list[] = {1,2,3,4,5,6};
 int x = 0;
 int y = 0;
 
@@ -20,7 +21,7 @@ float A = 0;
 float timeA = 0;
 int num = 0;
 int count = 1;
-
+int c = 0;
 String answer = "";
 char keydata = ' ';
 
@@ -31,16 +32,25 @@ float n = 0;
 float back_1 = 0;
 float back_2 = 0;
 
+boolean right = true;
 
 void setup() {
   size(1430, 700);
   background(255);
   x = int(random(10, 100));
   y = int(random(10, 100));
+  for (int i = scene_list.length - 1; i > 0; i--) {
+    int r = (int) (Math.random() * (i + 1));
+    int tmp = scene_list[i];
+    scene_list[i] = scene_list[r];
+    scene_list[r] = tmp;
+  }
+  println(scene_list);
 }
 
 void draw() {
   background(255);
+  //scene = sceneManager();
   switch(scene) {
   case 0:
     fill(0);
@@ -206,7 +216,7 @@ void draw() {
     //textSize(24);
     //text("Time Limit", width/4+60, height*3/4-10);
     timer();
-    println(time);
+    //println(time);
     back_1 = time * 4.25;
     if (back_1 > 255) {
       timerA();
@@ -220,18 +230,24 @@ void draw() {
     fill(0);
     textSize(56);
     textAlign(CENTER);
-	if (task != 6){
+	if (c != 5){
     	text("Enter the next.", width/2, (height/2)-50);
 	}
-    if (task == 6) {
+    if (c == 5) {
 	  text("Result", width/2, (height/2)-100);
-      text("answer1 :"+answer_list[1], width/2, (height/2));
-      text("answer2 :"+answer_list[2], width/2, (height/2)+50);
-      text("answer3 :"+answer_list[3], width/2, (height/2)+100);
-      text("answer4 :"+answer_list[4], width/2, (height/2)+150);
-      text("answer5 :"+answer_list[5], width/2, (height/2)+200);
-      text("answer6 :"+answer_list[6], width/2, (height/2)+250);
+      text("answer1 :"+answer_list[0], width/2, (height/2));
+      text("answer2 :"+answer_list[1], width/2, (height/2)+50);
+      text("answer3 :"+answer_list[2], width/2, (height/2)+100);
+      text("answer4 :"+answer_list[3], width/2, (height/2)+150);
+      text("answer5 :"+answer_list[4], width/2, (height/2)+200);
+      text("answer6 :"+answer_list[5], width/2, (height/2)+250);
     }
+  }
+  if(right == false){
+    fill(0);
+    textSize(56);
+    textAlign(CENTER);
+    text("x",width*7/8,height/2);
   }
 }
 
@@ -280,23 +296,31 @@ void makeProgressBar() {
 
 void nextScene() {
   if (n < 0) {
-    task = scene;
-    answer_list[task] = num;
+    right = true;
+    answer_list[c] = num;
     scene = 100;
   }
 }
+
 void keyReleased() {
   keydata = key;
   if (scene == 0) {
     if (keyCode == ENTER) {
-      scene = 1;
+      scene = scene_list[0];
+      println(scene);
     }
   } else if ((scene == 1) || (scene == 2) || (scene == 3) || (scene == 4) || (scene == 5) || (scene == 6)) {
     if (keyCode == ENTER) {
-      num += 1;
-      answer = "";
-      x = int(random(10, 100));
-      y = int(random(10, 100));
+      if (x+y == int(answer)){
+        num += 1;
+        answer = "";
+        x = int(random(10, 100));
+        y = int(random(10, 100));
+        right = true;
+      }else{
+        answer = "";
+        right = false;
+      }
     } else if (keyCode == BACKSPACE) {
       if (answer.length() > 0) {
         answer = answer.substring(0, answer.length()-1);
@@ -306,13 +330,16 @@ void keyReleased() {
     }
   } else if (scene == 100) {
     if (keyCode == ENTER) {
-      if (task == 6) {
+      if (c == 5) {
       } else {
+        c += 1;
         base_time = 0;
         t = 0;
         time = 0;
         num = 0;
-        scene = task + 1;
+        scene = scene_list[c];
+        println(scene);
+        println(c);
       }
     }
   }
