--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ void draw() {
       text("×",width*10/16+180+width/8, height/4+120+50);
     }
     if (scene == 4) {
-      text("×", width*10/16+180+width/8, height*3/4-60+50);
+      text("×", width*10/16+180, height*3/4-60+50);
     }
     if (scene == 5) {
       text("×",width/2+width/8, height*3/4+30+50);
